add stock in out/ product listing

--- a/wp-content/themes/gsn/work-assests/scss/partials/_main.scss
+++ b/wp-content/themes/gsn/work-assests/scss/partials/_main.scss
@@ -34,7 +34,9 @@ footer{
 		}
 	
 }
-
+.gallery_image_cntr{
+	img{width:150px;}
+	}
 
  /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
