SCSS folder structure change

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -19,6 +19,9 @@
 /* ====== Font Family CSS ====== */
 
 /* ====== Import COMPONENT CSS ====== */
-@import "components/main";
+@import "components/header";
+@import "components/footer";
+@import "components/gallery";
+@import "components/global";
+@import "components/map";
 /* ====== Import COMPONENT CSS ====== */
-
