fixed untracked files

--- a/wp-content/themes/gsn/work-assests/scss/components/_footer.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_footer.scss
@@ -6,6 +6,6 @@ footer {
   }
   @include max-screen($mq-tablet) {
     font-size: 20px;
-    color: red; font-weight:bold; border:1px solid #fff;
+    color: red;
   }
 }
