--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -23,5 +23,6 @@
 @import "components/footer";
 @import "components/gallery";
 @import "components/global";
+@import "components/landing";
 @import "components/map";
 /* ====== Import COMPONENT CSS ====== */
