--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -10,6 +10,8 @@ $mq-tablet: 1024px;
  * Define colors
  */
 
-$gray_bg: #efefef;
+$gray_bg: #9c9c9c;
 $red_bg: #ff0000;
+$space_gray: #888888;
+$dark_gray: #555555;
 
