registeration page css

--- a/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
@@ -17,11 +17,11 @@
       background: $gray_bg;
 
       &.active{
-        background: $dark_gray;
+        background: $brick_red;
       }
 
       &:hover{
-        background: $space_gray;
+        background: $petal_green;
       }
 
       a{
