creating dashboard.scss file

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -25,4 +25,5 @@
 @import "components/gallery";
 @import "components/landing";
 @import "components/map";
+@import "components/dashboard";
 /* ====== Import COMPONENT CSS ====== */
