--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -16,7 +16,7 @@
 
 @include font-face(welcome, '../../fonts/sweetness-webfont', 500, normal, eot woff2 woff);
 
-/* ====== Font Family CSS ====== */
+/* ====== Font Family CSS END ====== */
 
 /* ====== Import COMPONENT CSS ====== */
 @import "components/global";
@@ -26,4 +26,8 @@
 @import "components/landing";
 @import "components/map";
 @import "components/dashboard";
-/* ====== Import COMPONENT CSS ====== */
+/* ====== Import COMPONENT CSS END ====== */
+
+/* ====== Theme Styles CSS ====== */
+@import "theme/theme-header"
+/* ====== Theme Styles CSS END ====== */
