Client theme top header and navigation added

--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -20,3 +20,9 @@ $light_gray: #dcdcdc;
 
 /* dashboard colors */
 $dark_blue:#232429;
+
+/* Theme colors */
+$black: #000;
+$white: #fff;
+$gray: #444444;
+$dark__gray: #3c3c3c;
