--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
 a, a:hover, a:focus{
   color: inherit;
   outline: none;
@@ -5,6 +8,8 @@ a, a:hover, a:focus{
 }
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 li {
   display: inline-block;
