--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -101,8 +101,7 @@
     color: $white;    
     left: 0;    
     min-width: 100%;
-    opacity: 0;
-    padding: 10px 0;
+    opacity: 0;    
     position: absolute;
     top: 100%;
     transform: translateY(15px);
@@ -118,6 +117,7 @@
         display: block;
         line-height: 1;
         padding: 10px 25px;
+        text-align: left;
 
         &.dropdown__link::after{
           content: '\f0da';
@@ -146,3 +146,116 @@
   }
 }
 // /.navigation
+
+// cart
+.item__cart {
+  position: relative;
+}
+.cart {
+
+  &__icon {
+    
+    .cart-indicator{
+      background: $brick_red;
+      border-radius: 50%;
+      color: $white;      
+      height: 24px;
+      line-height: 22px;
+      text-align: center;
+      margin-top: -12px;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      width: 24px;      
+    }
+    a {
+      padding-right: 30px;
+
+      &:hover {
+        color: $brick_red;
+      }
+    }    
+  }
+
+  &__content {
+    background: $white;
+    box-shadow: 0 6px 15px 0 rgba(0,0,0,0.12);    
+    display: none;
+    padding: 10px; 
+    position: absolute;
+    right: 0;
+    top: 100%;
+    white-space: nowrap;
+    width: 380px;
+
+    > * {
+      line-height: 1;
+    }
+  }
+
+  &__prices {
+    border-top: 2px solid $light_gray;
+    padding-top: 5px;
+    
+    .cart-price {
+      padding: 7px 0;
+
+      .price {
+        float: right;
+        font-weight: bold;
+      }
+    }
+  }
+
+  &__buttons {
+    margin-top: 20px;
+    text-align: right;
+  }
+}
+
+.cart-item {
+  display: block;
+  margin-bottom: 15px;
+  position: relative;
+  
+  .cart-image {
+    float: left;
+    margin-right: 10px;
+    max-width: 80px;
+  }
+
+  .cart-product-info {
+    overflow: hidden;
+    padding-right: 30px;
+
+    .product__name {
+      text-align: right;
+      margin-bottom: 5px;
+
+      > span {
+        padding-right: 5px;
+      }
+
+      a {
+        float: left;
+      }
+    }
+
+    .product__attributes {
+      a {
+        font-style: italic;
+      }
+
+      .product__price {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .cart-product-remove {
+    position: absolute;
+    right: 5px;
+    top: 0;
+  }
+}
+// /.cart
