add new files for hero section

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -29,5 +29,6 @@
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
-@import "theme/theme-header"
+@import "theme/theme-header";
+@import "theme/theme-hero";
 /* ====== Theme Styles CSS END ====== */
