adding cart-page.scss file

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -26,6 +26,7 @@
 @import "components/landing";
 @import "components/map";
 @import "components/dashboard";
+@import "components/cart-page";
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
