--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -5,6 +5,7 @@ a, a:hover, a:focus{
   color: inherit;
   outline: none;
   text-decoration: none;
+  transition: all 0.3s ease;
 }
 ul {
   list-style: none;
@@ -13,6 +14,9 @@ ul {
 }
 li {
   display: inline-block;
+}
+.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus{
+  outline: none;
 }
 .page-title{
   font-weight: bolder;
