--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -68,6 +68,7 @@
     font-size: 16px;    
     position: relative;
     cursor: pointer;
+    float: left;
 
     &.active, &:hover > a {
       color: $brick_red;
@@ -108,6 +109,7 @@
     transition: all 0.3s ease;
     visibility: hidden;
     white-space: nowrap;
+    z-index: 2;
 
     li {
       display: block;
@@ -166,7 +168,8 @@
       position: absolute;
       right: 0;
       top: 50%;
-      width: 24px;      
+      width: 24px; 
+      z-index: 2;     
     }
     a {
       padding-right: 30px;
@@ -187,6 +190,7 @@
     top: 100%;
     white-space: nowrap;
     width: 380px;
+    z-index: 2;
 
     > * {
       line-height: 1;
@@ -210,6 +214,11 @@
   &__buttons {
     margin-top: 20px;
     text-align: right;
+
+    a:hover {
+      background: $brick_red;
+      color: $white;
+    }
   }
 }
 
