--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -1,22 +1,196 @@
 .hero-part {  
-  height: 550px;
+  height: 600px;
 
   .half-height {
     height: 50%;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 
     &:last-child {
       padding-bottom: 0;
-      padding-top: 10px;
+      padding-top: 15px;
     }
   }
+}
 
-  .half-image {
+.product-block {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+
+  > .product-image-cntr {
+    position: relative;
+    height: 100%;    
+  }
+
+  .product-image{
     background-color: $brick_red;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     display: block;
     height: 100%;
+    position: relative;
+    transition: all 0.3s ease;
+  }
+
+  .label-top {
+    background: $petal_green;
+    color: $white;
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    height: 46px;
+    left: -34px;
+    line-height: 54px;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    top: -6px;
+    transform: rotate(315deg);
+    -webkit-transform-origin: 50% 53%;
+    -webkit-font-smoothing: antialiased;    
+    width: 100px; 
+
+    &.label-sale {
+      background: $brick_red;
+      left: auto;
+      right: -34px;
+      transform: rotate(-315deg);
+    }
+  }
+
+  .cart-btn {  
+    background: $dark_gray;
+    bottom: 0;
+    color: $white;
+    font-weight: bold;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    transform: translateX(15px);
+    transition: all 0.2s ease-in-out;
+    visibility: hidden;
+    width: 100%;    
+
+    a {
+      display: block;
+      padding: 6px 0;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background: $brick_red;
+      }
+    }
+  }
+
+  &:hover .product-info-cntr .cart-btn {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  &:hover .product-image-cntr a.product-image {
+    transform: scale(1.1);
   }
 }
+// /.product-block
+
+.slider-cntr, .slick-list, .slick-track, .slider__slides, .slider-image {
+  height: 100%;
+}
+.slider-image {
+  display: block;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slick-slider {
+
+  .slick-arrow {
+    background: $dark_gray;
+    border: none;
+    color: $white;
+    font-size: 0;
+    height: 50px;
+    left: 0;
+    outline: 0;
+    position: absolute;    
+    top: 50%;
+    transform: translateY(-50%);
+    transition: all 0.3s ease;
+    width: 35px;
+    z-index: 1; 
+
+    &::before {      
+      content: '\f104';
+      font-family: FontAwesome;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    &.slick-next {
+      left: auto;
+      right: 0;
+
+      &::before {
+        content: '\f105';
+      }
+    }
+
+    &:hover {
+      background: $brick_red;
+    }
+  }
+
+  .slider__slides {
+    position: relative;
+    overflow: hidden;
+
+    &.slick-active.slick-current .slider-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translateX(0);
+    }
+  }
+}
+
+.slider-content {  
+  background-color: rgba(0,0,0,0.6);
+  bottom: 0;
+  color: $white;
+  left: 0;
+  opacity: 0;
+  padding: 20px 35px;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  transition: all 0.3s ease;
+  transition-delay: 0.4s;
+  transform: translateX(40px);
+  visibility: hidden;
+  z-index: 2;
+
+  h2 {
+    text-transform: uppercase;
+    font-weight: bolder;
+    margin-bottom: 10px;
+  }
+
+  span {
+    color: $light_gray;
+    display: block;
+    font-style: italic;
+    margin-bottom: 10px;    
+  }
+
+  .slider-btn a{
+    background: $brick_red;    
+
+    &:hover {
+      background: $petal_green;
+    }
+  }
+}
+// /.slider
