On sale section and footer add

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -32,4 +32,5 @@
 /* ====== Theme Styles CSS ====== */
 @import "theme/theme-header";
 @import "theme/theme-hero";
+@import "theme/theme-product-section.scss";
 /* ====== Theme Styles CSS END ====== */
