--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -17,8 +17,12 @@
     text-transform: uppercase;    
 
     h1{
-      line-height: 100px;
+      // line-height: 100px;
       font-weight: bolder;
+
+      img {
+        max-width: 150px;
+      }
     }
   }
   // /__logo
