--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -17,9 +17,10 @@
   height: 100%;
   overflow: hidden;
 
-  > .product-image-cntr {
+  > .product-image-cntr {    
+    height: 100%;
+    overflow: hidden;
     position: relative;
-    height: 100%;    
   }
 
   .product-image{
@@ -85,7 +86,7 @@
     }
   }
 
-  &:hover .product-info-cntr .cart-btn {
+  &:hover .product-image-cntr .cart-btn {
     opacity: 1;
     visibility: visible;
     transform: translateX(0);
@@ -94,6 +95,8 @@
   &:hover .product-image-cntr a.product-image {
     transform: scale(1.1);
   }
+
+  
 }
 // /.product-block
 
