New sections added

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -30,6 +30,7 @@
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
+@import "theme/theme-footer.scss";
 @import "theme/theme-header";
 @import "theme/theme-hero";
 @import "theme/theme-product-section.scss";
