--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-hero.scss
@@ -24,6 +24,20 @@
     height: 100%;
     overflow: hidden;
     position: relative;
+
+    &::after {
+      background: rgba(0,0,0,0.4);
+      content: '';
+      height: 100%;
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      transition: all 0.3s ease;
+    }
   }
 
   .product-image{
@@ -39,6 +53,7 @@
 
   .label-top {
     background: $petal_green;
+    box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.4);
     color: $white;
     display: block;
     font-size: 12px;
@@ -54,6 +69,7 @@
     -webkit-transform-origin: 50% 53%;
     -webkit-font-smoothing: antialiased;    
     width: 100px; 
+    z-index: 2;
 
     &.label-sale {
       background: $brick_red;
@@ -63,36 +79,54 @@
     }
   }
 
-  .cart-btn {  
-    background: $dark_gray;
-    bottom: 0;
+  .cart-btn {         
     color: $white;
-    font-weight: bold;
+    font-size: 11px;    
     left: 0;
     opacity: 0;
     position: absolute;
     text-align: center;
     text-transform: uppercase;
-    transform: translateX(15px);
+    top: 50%;
+    transform: translateY(-50%);
     transition: all 0.2s ease-in-out;
     visibility: hidden;
-    width: 100%;    
+    width: 100%;  
+    z-index: 2;  
 
-    a {
-      display: block;
-      padding: 6px 0;
+    a {          
+      border-top: 3px solid transparent;
+      display: inline-block;
+      padding: 5px 10px 10px;
       transition: all 0.2s ease-in-out;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
 
-      &:hover {
-        background: $brick_red;
+      &::before {
+        content: '\f217';
+        display: block;
+        font-family: FontAwesome;
+        font-size: 24px;
+      }
+
+      &.added_to_cart::before {
+        content: '\f06e';
+      }
+
+      &:hover {        
+        background: $petal_green;
+        border-color: $brick_red;
       }
     }
   }
 
-  &:hover .product-image-cntr .cart-btn {
+  &:hover .product-image-cntr::after {
     opacity: 1;
     visibility: visible;
-    transform: translateX(0);
+  }
+
+  &:hover .product-image-cntr .cart-btn {
+    opacity: 1;
+    visibility: visible;    
   }
 
   &:hover .product-image-cntr a.product-image {
