--- a/wp-content/themes/gsn/work-assests/scss/components/_dashboard.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_dashboard.scss
@@ -1,4 +1,5 @@
 
+section{ clear:both; display:block;}
 .page-template-dashboard header {
 	background: $gray_bg;
 	padding: 2px 10px 5px 10px;
@@ -17,3 +18,4 @@
 			 }
 		}
 }
+.dash-top-title{}
