--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -108,6 +108,7 @@
     transition: all 0.3s ease;
     visibility: hidden;
     white-space: nowrap;
+    z-index: 2;
 
     li {
       display: block;
@@ -166,7 +167,8 @@
       position: absolute;
       right: 0;
       top: 50%;
-      width: 24px;      
+      width: 24px;  
+      z-index: 2;    
     }
     a {
       padding-right: 30px;
@@ -187,6 +189,7 @@
     top: 100%;
     white-space: nowrap;
     width: 380px;
+    z-index: 2;
 
     > * {
       line-height: 1;
