Footer , header styles fix

--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -1,8 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+a {
+  display: inline-block;
+}
 a, a:hover, a:focus{
-  color: inherit;
+  color: inherit;  
   outline: none;
   text-decoration: none;
   transition: all 0.3s ease;
