--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
@@ -67,3 +67,23 @@
     }
   }
 }
+
+.back-to-top {
+  bottom: 40px;
+  display: none;
+  position: fixed;
+  right: 30px;  
+
+  a {
+    background: $brick_red;    
+    color: $white;
+    font-size: 24px;    
+    height: 40px;
+    width: 40px;
+    text-align: center;
+
+    &:hover {
+      background: $petal_green;
+    }
+  }
+}
