--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -9,16 +9,26 @@
   }
 
   &__bottom {
+    background: $white;
     height: 100px;
     line-height: 100px;
+
+    // &.stick {
+    //   left: 0;
+    //   position: fixed;
+    //   top: 0; 
+    //   width: 100%;   
+    //   z-index: 4;  
+    // }
   }
 
   &__logo {
     text-transform: uppercase;    
 
     h1{
-      // line-height: 100px;
+      font-size: 20px;
       font-weight: bolder;
+      margin-top: 15px;
 
       img {
         max-width: 150px;
@@ -194,7 +204,7 @@
     top: 100%;
     white-space: nowrap;
     width: 380px;
-    z-index: 2;
+    z-index: 3;
 
     > * {
       line-height: 1;
