category page design

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -34,4 +34,5 @@
 @import "theme/theme-header";
 @import "theme/theme-hero";
 @import "theme/theme-product-section.scss";
+@import "theme/theme-inner-page-top.scss";
 /* ====== Theme Styles CSS END ====== */
