--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-section.scss
@@ -13,7 +13,6 @@ main {
   text-align: center;
   text-transform: uppercase;
 }
-
 .product-list-cntr {
   
   ul.products {
@@ -28,6 +27,37 @@ main {
       padding: 0 15px;
       vertical-align: top;
       width: 25%;
+
+      .product-info-cntr {
+        margin-top: 20px;
+        padding: 0 10px;
+        text-align: center;    
+
+        h3 {
+          font-style: italic;
+          font-size: 18px;
+          margin-bottom: 5px;
+          padding: 0;
+
+          a:hover {
+            color: $brick_red;
+          }
+        }
+
+        span.price {
+          color: $black;
+          font-size: 16px;
+          font-weight: bold;
+
+          del {
+            color: $space_gray;
+          }
+
+          ins {
+            text-decoration: none;
+          }
+        }
+      }
     }
   }
 
