desigining cart page

--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -14,6 +14,7 @@ $gray_bg: #9c9c9c;
 $red_bg: #ff0000;
 $space_gray: #888888;
 $dark_gray: #555555;
+$mid_gray: #777777;
 $brick_red: #E74F4A;
 $petal_green: #68BD74;
 $light_gray: #dcdcdc;
