creating about and contact scss file and writting css on about page

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -38,4 +38,7 @@
 @import "theme/theme-product-section.scss";
 @import "theme/theme-category-page.scss";
 @import "theme/theme-cart-page";
+@import "theme/theme-about";
+@import "theme/theme-contact";
+
 /* ====== Theme Styles CSS END ====== */
