--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -1,5 +1,15 @@
 .dashboard-main-cntr {
   padding-top: 100px;
+
+  h3 {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: $white;
+    background: $dark_gray;
+    font-size: 18px;
+    padding: 20px;
+    margin: 20px 0 15px;
+  }
 }
 .dashboard-title {
   text-transform: uppercase;
