Dashboard navigation tooltip added when the nav is not open

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -288,6 +288,7 @@
 .search__content.toggle__content {
   // display: block;
   width: 600px;
+  right: 15px;
 }
 // /.cart
 
@@ -297,7 +298,7 @@
 }
 
 .search {
-  position: relative;
+  // position: relative;
   
   a:hover {
     color: $brick_red;
