--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-header.scss
@@ -18,11 +18,15 @@ section{
 		&.nav-open .dashboard__nav {
 			width: 250px;
 
-			a span {
+			a span.nav-text {
 				transform: translateX(0);
 				opacity: 1;			
 				transition: transform 0.3s ease-in-out, opacity 0.8s ease-in-out;
 			}
+		}
+
+		&.nav-open .dashboard-tooltip {
+			display: none;
 		}
 
 		&.nav-open .dashboard-nav-overlay {
@@ -93,7 +97,7 @@ section{
 	// padding-top: 59px;
 	background: $dark__gray;
 	width: 70px;
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	z-index: 3;	
 	transition: all 0.2s ease-in-out;
 
@@ -127,6 +131,12 @@ section{
 					width: 100%;
 				}
 
+				&:hover .dashboard-tooltip {
+					opacity: 1;
+					visibility: visible;
+					transform: translateY(0);
+				}
+
 				.dashboard-icons {
 					height: 50px;
 					width: 30px;
@@ -136,7 +146,7 @@ section{
 					position: relative;					
 				}
 
-				span {
+				span.nav-text {
 					padding-left: 10px;
 					position: relative;
 					display: inline-block;
@@ -205,5 +215,35 @@ section{
 	&:hover .profile__links {
 		opacity: 1;
 		visibility: visible;
+	}
+}
+
+.dashboard-tooltip {
+	position: absolute;
+	left: 100%;
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(10px);
+	transition: all 0.2s ease-in-out;
+
+	span {
+		background: rgba(0,0,0,0.5);
+		padding: 5px 15px;
+		font-size: 14px;
+		margin-left: 8px;
+		border-radius: 4px;
+		position: relative;
+
+		&:before {
+			content: '';
+			position: absolute;
+			width: 0;
+			height: 0;
+			left: -8px;
+			top: 10px;
+			border-style: solid;
+			border-width: 5px 8px 5px 0;
+			border-color: transparent rgba(0,0,0,0.5) transparent transparent;
+		}
 	}
 }
