Breadcrumb color fix

--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-category-page.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-category-page.scss
@@ -21,7 +21,7 @@
   }
 }
 
-.woocommerce-breadcrumb {
+.woocommerce-page .woocommerce-breadcrumb {
   color: $dark_gray;  
   margin-bottom: 0;
   margin-top: 10px;
