--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -33,13 +33,14 @@
 /* ====== Dashboard Styles CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
-@import "theme/theme-footer.scss";
+@import "theme/theme-footer";
 @import "theme/theme-header";
 @import "theme/theme-hero";
-@import "theme/theme-product-section.scss";
-@import "theme/theme-category-page.scss";
+@import "theme/theme-product-section";
+@import "theme/theme-category-page";
 @import "theme/theme-cart-page";
 @import "theme/theme-about";
 @import "theme/theme-contact";
+@import "theme/theme-product-single";
 
 /* ====== Theme Styles CSS END ====== */
