Theme header fix and add scss file for dashboard product page

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -30,6 +30,7 @@
 /* ====== Dashboard Styles CSS ====== */
 @import "dashboard/dashboard-header";
 @import "dashboard/dashboard-landing";
+@import "dashboard/dashboard-products";
 /* ====== Dashboard Styles CSS END ====== */
 
 /* ====== Theme Styles CSS ====== */
