--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -32,7 +32,7 @@
     h1{
       font-size: 20px;
       font-weight: bolder;
-      margin-top: 15px;
+      // margin-top: 15px;
 
       img {
         max-width: 150px;
