--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -1,5 +1,6 @@
 .dashboard-main-cntr {
   padding-top: 100px;
+  padding-bottom: 100px;
 
   h3 {
     text-transform: uppercase;
@@ -8,7 +9,7 @@
     background: $dark_gray;
     font-size: 18px;
     padding: 20px;
-    margin: 20px 0 15px;
+    margin: 0 15px 30px;
   }
 }
 .dashboard-title {
@@ -19,9 +20,10 @@
 }
 
 .summary-cards-cntr {
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
+  clear: both;
   
   .summary__card {
     margin-bottom: 30px;
@@ -40,8 +42,9 @@
       }
 
       span {
-        font-size: 24px;
+        font-size: 30px;
         line-height: 1;
+        font-weight: bold;
       }    
 
       h2 {
