Rename scss file for inner pages and update styles for profile and store setting pages

--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
@@ -1,3 +1,6 @@
+// ===================== //
+// product setting pages
+// ===================== //
 .product-links-cntr {
   padding: 0 15px;
   font-size: 0;
@@ -90,3 +93,34 @@
     }
   }
 }
+// ===================== //
+// /.product setting pages
+// ===================== //
+
+// ===================== //
+// profile setting pages
+// ===================== //
+.profile-setting-cntr .profile-update-btn {
+  margin-left: 15px;
+  margin-top: 20px;
+}
+// ===================== //
+// /.profile setting pages
+// ===================== //
+
+// ===================== //
+// store setting pages
+// ===================== //
+.store-setting-cntr {
+  .form-group h3 {
+    margin: 0 0 30px;
+  }
+
+  .store-update-btn {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+}
+// ===================== //
+// /.store setting pages
+// ===================== //
