--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
@@ -63,8 +63,14 @@
   margin-top: 30px;
 }
 
-.product-setting button {
-  margin-left: 15px;
+.product-setting {
+  h3 {
+    margin-bottom: 20px;
+  }
+
+  button {
+    margin-left: 15px;
+  }
 }
 
 .dashboard-main-cntr {
