--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -7,8 +7,8 @@
     font-weight: bold;
     color: $white;
     background: $dark_gray;
-    font-size: 18px;
-    padding: 20px;
+    font-size: 16px;
+    padding: 15px 20px;
     margin: 0 15px 30px;
   }
 }
