--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
@@ -130,3 +130,28 @@
 // ===================== //
 // /.store setting pages
 // ===================== //
+
+// ===================== //
+// order pages
+// ===================== //
+.orders {
+  font-size: 0;
+
+  .order-list-item {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 16px;
+    float: none;
+
+    span {
+      font-weight: bold;
+    }
+
+    .view-order-detail {
+      font-size: 14px;
+    }
+  }
+}
+// ===================== //
+// /.order pages
+// ===================== //
