--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
@@ -140,8 +140,18 @@
   .order-list-item {
     display: inline-block;
     vertical-align: top;
-    font-size: 16px;
+    font-size: 14px;
     float: none;
+    margin-bottom: 15px;
+
+    .order-details-list {
+      padding: 15px;
+      border: 1px solid $light_gray;
+    }
+
+    p {
+      margin-bottom: 5px;
+    }
 
     span {
       font-weight: bold;
