--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-header.scss
@@ -57,7 +57,7 @@ section{
 	height: 18px;
 	width: 30px;
 	float: left;
-	margin-top: 4px;
+	margin-top: 4px;	
 
 	span {
 		display: block;
@@ -66,6 +66,7 @@ section{
 		background: $white;
 		position: relative;
 		top: 50%;
+		transition: all 0.2s ease-in-out;
 
 		&::before, &::after {
 			content: '';
