--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -18,6 +18,7 @@ $mid_gray: #777777;
 $brick_red: #E74F4A;
 $petal_green: #68BD74;
 $light_gray: #dcdcdc;
+$lighter_gray: #ececec;
 
 /* dashboard colors */
 $dark_blue:#232429;
