--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -18,6 +18,9 @@ ul {
 li {
   display: inline-block;
 }
+select {
+  outline: 0;
+}
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus{
   outline: none;
 }
