--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -19,6 +19,7 @@ $brick_red: #E74F4A;
 $petal_green: #68BD74;
 $light_gray: #dcdcdc;
 $lighter_gray: #ececec;
+$border-gray: #eaeaea;
 
 /* dashboard colors */
 $dark_blue:#232429;
@@ -28,3 +29,5 @@ $black: #000;
 $white: #fff;
 $gray: #444444;
 $dark__gray: #252525;
+$white_smoke: #f5f5f5;
+$rating_color: #ffae00;
