--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -25,6 +25,7 @@
 @import "components/gallery";
 @import "components/landing";
 @import "components/map";
+@import "components/alert";
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Dashboard Styles CSS ====== */
