Theme search autocomplete style complete

--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -5,6 +5,7 @@
 
 /* Bootstrap */
 @import "vendor/bootstrap/bootstrap";
+// @import "vendor/jquery.mCustomScrollbar.min.scss";
 
 
 /* ====== BASE CSS ====== */
