--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -15,7 +15,7 @@
 
 /* ====== Font Family CSS ====== */
 
-@include font-face(welcome, '../../fonts/sweetness-webfont', 500, normal, eot woff2 woff);
+//@include font-face(welcome, '../../fonts/sweetness-webfont', 500, normal, eot woff2 woff);
 
 /* ====== Font Family CSS END ====== */
 
