--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-single.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-product-single.scss
@@ -10,11 +10,29 @@
       div.product {
         div.images {
           width: 35%;
-					margin-bottom:10px;
         }
         .thumbnails {
+					font-size: 0;
+					width: 85%;
+    			margin: 0 auto;
+						.slick-arrow{
+							height: 38px; 
+							width:25px;
+							line-height: 1.4;
+							}
+						.slick-next{ right:-30px;}
+						.slick-prev{ left:-30px;}
           a {
-            width: 20%;
+            width: 15%;
+						    margin:0;
+    						padding: 5px;
+								float:none;
+								display: inline-block;
+								vertical-align:top;
+								&:hover {
+										
+									}
+									img{ border:1px solid $light_gray;}
           }
         }
       }
@@ -81,7 +99,8 @@
 					}
 					ul.tabs{
 						margin-bottom:0;
-						padding: 0 0 0 5px;
+						padding: 0;
+						font-size:0;
 						&:before{ 
 							border:none;
 							}
@@ -92,6 +111,8 @@
 							margin:0;
 							border-radius:0;
 							transition: all 0.3s ease;
+							margin-right: 10px;
+							font-size: 16px;
 								&:hover{
 									background-color:$petal_green;
 								}
@@ -102,6 +123,8 @@
 									color:$white; 
 									font-weight:normal;
 									padding: 4px 0;
+									
+									
 									}
 							}
 							li.active{background-color:$petal_green;}
@@ -111,8 +134,7 @@
 						border:1px solid $border-gray;
 						padding: 40px 20px 20px;
 						margin-top:-1px;
-						background:$white_smoke;
-						font-size:15px;
+						background:$white_smoke;;
 							ul.specification-list{
 									li{ 
 										display:block;
@@ -150,6 +172,12 @@
 											.comment-text{
 												background-color:$white;
 												border-radius:0;
+												.star-rating{
+													margin-top:0;
+													}
+												.meta{
+													strong{ display:block;}	
+													}
 												}
 											p{ font-size:12px;}	
 										}
@@ -209,6 +237,7 @@
 										}
 								}
 							.product-info-cntr{
+								text-align:center;
 									h3{ 
 										font-style:italic;
 										a{
@@ -261,6 +290,7 @@
 						font-size:14px;
 						width: 6.4em;
 						margin:7px 4px 0 0;
+						float:none;
 						span, a{
 							&::before{
 								color: $rating_color;
